<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hikeCategory"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/category" />
        <TextView
            android:id="@+id/hikeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hike_name"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/hikeDistance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/_20km" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hikeDifficulty"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/difficulty" />
        <TextView
            android:id="@+id/hikeLocation"
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <TextView
        android:id="@+id/hikeDescription"
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>